--- a/docs/blocks/generators/gas_turbine.mdx
+++ b/docs/blocks/generators/gas_turbine.mdx
@@ -6,7 +6,7 @@ title: Gas Turbine
 
 # Gas Turbine
 
-The **Gas Turbine** produces energy from various gases. It has an internal **[Tank](/img/mods/techreborn/basic_tank_unit)** that can hold 10k mB of fluid (10 **[Buckets](/mods/minecraft/bucket)** or **[Cells](/items/fluid/empty_cell)** worth) which is consumed as it is converted to energy.
+The **Gas Turbine** produces energy from various gases. It has an internal tank that can hold 10k mB of fluid worth which is consumed as it is converted to energy.
 
 | Tier   | Generation Rate | Output  | Storage |
 |--------|------------------|---------|---------|
@@ -27,7 +27,7 @@ The **Gas Turbine** produces energy from various gases. It has an internal **[Ta
 ### Usage
 
 - Place a cell or bucket of fuel into the input slot to fill the internal tank  
-- Can also be filled by an external **[Tank](/img/mods/techreborn/basic_tank_unit)**  
+- Can also be filled by an external **[Tank](/docs/blocks/tanks/)**  
 - Outputs energy on all sides
 
 ### Related Items
