--- a/docs/blocks/generators/lightning_rod.mdx
+++ b/docs/blocks/generators/lightning_rod.mdx
@@ -6,7 +6,8 @@ title: Lightning Rod
 
 # Lightning Rod
 
-**Lightning Rod** is a **[passive generator](/docs/blocks/generators/passive_generators)** that produces energy from lightning strikes during [thunderstorms](http://minecraft.gamepedia.com/Thunderstorm). Attaching more than one **Iron Fence** on top of the machine will increase the chance of lightning.
+**Lightning Rod** is a **[passive generator]**(/docs/blocks/generators/passive_generators) that produces energy from lightning strikes during [thunderstorms](http://minecraft.gamepedia.com/Thunderstorm). 
+Attaching more than one **Iron Fence** on top of the machine will increase the chance of lightning.
 
 | Tier    | Generation Rate | Output    | Storage |
 |---------|------------------|-----------|---------|
@@ -18,5 +19,5 @@ title: Lightning Rod
 
 ### Usage
 
-- Put **[Iron Fence](/img/mods/techreborn/iron_fence)** on top of the block. More fences will increase the chance of lightning striking the generator.  
+- Put **Iron Fence** on top of the block. More fences will increase the chance of lightning striking the generator.  
 - Outputs energy on all sides except the top
