--- a/docs/blocks/generators/plasma_generator.mdx
+++ b/docs/blocks/generators/plasma_generator.mdx
@@ -4,9 +4,7 @@ title: Plasma Generator
 
 <ItemImage file="plasma_generator" alt="Plasma Generator" size="200" />
 
-# Plasma Generator
-
-The **Plasma Generator** produces energy from Heliumplasma. It has an internal **[Tank](/img/mods/techreborn/basic_tank_unit)** that can hold 10k mB of fluid (10 **[Buckets](/mods/minecraft/bucket)** or **[Cells](/items/fluid/empty_cell)** worth) which is consumed as it is converted to energy.
+The **Plasma Generator** produces energy from Heliumplasma. It has an internal tank that can hold 10k mB of fluid which is consumed as it is converted to energy.
 
 | Tier    | Generation Rate | Output    | Storage |
 |---------|------------------|-----------|---------|
@@ -25,9 +23,9 @@ The **Plasma Generator** produces energy from Heliumplasma. It has an internal *
 ### Usage
 
 - Place a cell or bucket of fuel into the input slot to fill the internal tank  
-- Can also be filled by an external **[Tank](/img/mods/techreborn/basic_tank_unit)**  
+- Can also be filled by an external **[Tank](/docs/blocks/tanks/)**  
 - Outputs energy on all sides
 
 ### Related Items
 
-<McItem slug="techreborn:heliumplasma_cell" inline={true}/>
+<McItem slug="techreborn:heliumplasma_cell" inline={true} />
