--- a/docs/items/batteries/energy_crystal.mdx
+++ b/docs/items/batteries/energy_crystal.mdx
@@ -5,7 +5,7 @@ title: Energy Crystal
 
 <ItemImage file="energy_crystal" alt="Energy Crystal" size="200" />
 
-The **Energy Crystal** is a portable battery used to charge items. For more details and how to use, read [general information about Batteries](/docs/items/battery).
+The **Energy Crystal** is a portable battery used to charge items. For more details and how to use, read [general information about Batteries](/docs/items/batteries).
 
 | Tier | I/O Rate | Storage |
 | ---- | -------- | ------- |
