--- a/docs/items/batteries/lapotron_crystal.mdx
+++ b/docs/items/batteries/lapotron_crystal.mdx
@@ -5,7 +5,7 @@ title: Lapotron Crystal
 
 <ItemImage file="lapotron_crystal" alt="Lapotron Crystal" size="200" />
 
-The **Lapotron Crystal** is a portable battery used to charge items. For more details and how to use, read [general information about Batteries](/docs/items/battery).
+The **Lapotron Crystal** is a portable battery used to charge items. For more details and how to use, read [general information about Batteries](/docs/items/batteries).
 
 | Tier    | I/O Rate | Storage |
 | ------- | -------- | ------- |
