--- a/docs/items/batteries/lapotronic_energy_orb.mdx
+++ b/docs/items/batteries/lapotronic_energy_orb.mdx
@@ -9,7 +9,7 @@ title: Lapotronic Energy Orb
   size="200"
 />
 
-The **Lapotronic Energy Orb** is a portable battery used to charge items. For more details and how to use, read [general information about Batteries](/docs/items/battery).
+The **Lapotronic Energy Orb** is a portable battery used to charge items. For more details and how to use, read [general information about Batteries](/docs/items/batteries).
 
 | Tier   | I/O Rate | Storage |
 | ------ | -------- | ------- |
