--- a/docs/items/batteries/lithium_ion_battery.mdx
+++ b/docs/items/batteries/lithium_ion_battery.mdx
@@ -5,7 +5,7 @@ title: Lithium-Ion Battery
 
 <ItemImage file="lithium_ion_battery" alt="Lithium-Ion Battery" size="200" />
 
-The **Lithium-Ion Battery** is a portable battery used to charge items. For more details and how to use, read [general information about Batteries](/docs/items/battery).
+The **Lithium-Ion Battery** is a portable battery used to charge items. For more details and how to use, read [general information about Batteries](/docs/items/batteries).
 
 | Tier   | I/O Rate | Storage |
 | ------ | -------- | ------- |
