--- a/docs/items/parts/carbon_mesh.mdx
+++ b/docs/items/parts/carbon_mesh.mdx
@@ -4,7 +4,7 @@ title: Carbon Mesh
 
 <ItemImage file="carbon_mesh" alt="Carbon Mesh" size="200" />
 
-Carbon mesh is a [part](/items/part) used in crafting <McItem slug="techreborn:carbon_plate"/> with a <McItem slug="techreborn:compressor"/>.
+Carbon mesh is a [part](/docs/items/parts) used in crafting <McItem slug="techreborn:carbon_plate"/> with a <McItem slug="techreborn:compressor"/>.
 
 ## Recipes
 
