--- a/docs/items/parts/electronic_circuit.mdx
+++ b/docs/items/parts/electronic_circuit.mdx
@@ -4,7 +4,7 @@ title: Electronic Circuit
 
 <ItemImage file="electronic_circuit" alt="Electronic Circuit" size="200" />
 
-The **Electronic Circuit** is a [part](/docs/items/part) used in crafting the basic machines, tools, and their component parts. 
+The **Electronic Circuit** is a [part](/docs/items/parts) used in crafting the basic machines, tools, and their component parts. 
 It's also used in crafting the <McItem slug="techreborn:advanced_circuit"/>, which is used to make the higher tiers of items.
 
 ## Recipes
