--- a/docs/items/parts/industrial_circuit.mdx
+++ b/docs/items/parts/industrial_circuit.mdx
@@ -5,7 +5,7 @@ title: Industrial Circuit
 <ItemImage file="industrial_circuit" alt="Industrial Circuit" size="200" />
 
 
-The **Industrial Circuit** is a [part](/items/part) used in crafting the advanced machines, tools, and their component parts.
+The **Industrial Circuit** is a [part](/docs/items/parts) used in crafting the advanced machines, tools, and their component parts.
 
 ## Recipes
 
