--- a/docs/items/parts/sap.mdx
+++ b/docs/items/parts/sap.mdx
@@ -10,4 +10,4 @@ Sap can be smelted into <McItem slug="techreborn:rubber" />.
 
 ![sap_spot](/img/sap_spot.png)
 
-Sap spots are found on the side of a **[Rubber Trees](/world_generation/rubber_tree)** and they regenerate over time.
+Sap spots are found on the side of a **[Rubber Trees](/docs/world/rubber_tree)** and they regenerate over time.
