--- a/docs/items/plates/plates.mdx
+++ b/docs/items/plates/plates.mdx
@@ -6,7 +6,7 @@ title: Plates
 <ItemImage file="aluminum_plate" alt="Plates" size="200" />
 
 Plates are made from corresponding materials, like [**Ingots**](/docs/items/ingots)
-or [**Carbon Mesh**](/docs/items/part/carbon_mesh) in [**Compressor**](/blocks/compressor). 
+or [**Carbon Mesh**](/docs/items/parts/carbon_mesh) in [**Compressor**](/docs/blocks/machines/compressor). 
 
 Plates serve as parts for different machines.
 
