--- a/docs/world/world.mdx
+++ b/docs/world/world.mdx
@@ -7,4 +7,4 @@ Tech Reborn adds a few world generation features:
 
 - [**Ores**](ores)
 - [**Rubber Trees**](rubber_tree)
-- [**Villagers**](world)
+- **Villagers**
