--- a/docs/blocks/generators/diesel_generator.mdx
+++ b/docs/blocks/generators/diesel_generator.mdx
@@ -6,7 +6,7 @@ title: Diesel Generator
 
 # Diesel Generator
 
-The **Diesel Generator** produces energy from various fluids. It has an internal **[Tank](/img/mods/techreborn/basic_tank_unit)** that can hold 10k mB of fluid (10 **[Buckets](/mods/minecraft/bucket)** or **[Cells](/items/fluid/empty_cell)** worth) which is consumed as it is converted to energy.
+The **Diesel Generator** produces energy from various fluids. It has an internal tank that can hold 10k mB of fluid (10 **Buckets** or **Cells**) worth which is consumed as it is converted to energy.
 
 | Tier | Fuel Type | Output | Storage |
 |------|------------|--------|---------|
@@ -29,7 +29,7 @@ The **Diesel Generator** produces energy from various fluids. It has an internal
 ### Usage
 
 - Place a cell or bucket of fuel into the input slot to fill the internal tank  
-- Can also be filled by an external **[Tank](/img/mods/techreborn/basic_tank_unit)**  
+- Can also be filled by an external **[Tank](/docs/blocks/tanks/)**  
 - Outputs energy on all sides
 
 ### Related Items
