--- a/docs/items/parts/advanced_circuit.mdx
+++ b/docs/items/parts/advanced_circuit.mdx
@@ -4,7 +4,7 @@ title: Advanced Circuit
 
 <ItemImage file="advanced_circuit" alt="Advanced Circuit" size="200" />
 
-The **Advanced Circuit** is a [part](/docs/items/part) used in crafting the advanced machines, tools, and their component parts.
+The **Advanced Circuit** is a [part](/docs/items/parts) used in crafting the advanced machines, tools, and their component parts.
 
 ## Recipes
 <CraftingTable recipe=" input minecraft:redstone minecraft:glowstone_dust minecraft:redstone input minecraft:lapis_lazuli techreborn:electronic_circuit minecraft:lapis_lazuli input minecraft:redstone minecraft:glowstone_dust minecraft:redstone output techreborn:advanced_circuit "/>
