--- a/docs/items/parts/data_storage_chip.mdx
+++ b/docs/items/parts/data_storage_chip.mdx
@@ -4,7 +4,7 @@ title: Data Storage Chip
 
 <ItemImage file="data_storage_chip" alt="Data Storage Chip" size="200" />
 
-The **Data Storage Chip** is a [part](/docs/items/part) used in crafting [Quantum Armor](/items/armor/quantum_armor) and several other parts and machines.
+The **Data Storage Chip** is a [part](/docs/items/parts) used in crafting [Quantum Armor](/docs/items/armor/quantum_armor) and several other parts and machines.
 
 ## Recipes
 
@@ -23,7 +23,7 @@ The **Data Storage Chip** is a [part](/docs/items/part) used in crafting [Quantu
 
 Used as an ingredient in the <McItem slug="minecraft:crafting_table"/> to produce:
 
-- **[Quantum Armor](/items/armor/quantum_armor)**
+- **[Quantum Armor](/docs/items/armor/quantum_armor)**
 - <McItem slug="techreborn:Superconductor_Upgrade" />
 - <McItem slug="techreborn:industrial_unit_upgrader" />
 - <McItem slug="techreborn:Quantum_Tank_Unit" />
