--- a/docs/items/parts/iridium_neutron_reflector.mdx
+++ b/docs/items/parts/iridium_neutron_reflector.mdx
@@ -6,7 +6,7 @@ title: Iridium Neutron Reflector
 
 ## Iridium Neutron Reflector
 
-The **Iridium Neutron Reflector** is a part used in crafting [Quantum Armor](/items/armor/quantum_armor) and <McItem slug="techreborn:Fusion_Coil" inline={true}/> **[Fusion Coils](/blocks/Fusion_Coil)**.
+The **Iridium Neutron Reflector** is a part used in crafting [Quantum Armor](/docs/items/armor/quantum_armor) and <McItem slug="techreborn:Fusion_Coil" />.
 
 ### Recipes
 
@@ -14,7 +14,7 @@ The **Iridium Neutron Reflector** is a part used in crafting [Quantum Armor](/it
 
 ### Uses
 
-Used as an ingredient in the <McItem slug="minecraft:crafting_table" inline={true}/> to produce:
+Used as an ingredient in the <McItem slug="minecraft:crafting_table" /> to produce:
 
 - <McItem slug="techreborn:Fusion_Coil"/>
 - <McItem slug="techreborn:quantum_chestplate"/>
