Add create Industrial Centrifuge recipe
https://github.com/TechReborn/TechReborn/discussions/3439

--- a/docs/blocks/machines/industrial_centrifuge.mdx
+++ b/docs/blocks/machines/industrial_centrifuge.mdx
@@ -16,6 +16,8 @@ The **Industrial Centrifuge** is a machine used to produce <McItem slug="techreb
 
 <CraftingTable recipe=" input techreborn:aluminum_plate techreborn:advanced_circuit techreborn:aluminum_plate input techreborn:advanced_machine_frame techreborn:extractor techreborn:advanced_machine_frame input techreborn:aluminum_plate techreborn:advanced_circuit techreborn:aluminum_plate output techreborn:industrial_centrifuge "/>
 
+<CraftingTable recipe=" input techreborn:refined_iron_ingot techreborn:advanced_circuit techreborn:refined_iron_ingot input techreborn:advanced_machine_frame techreborn:extractor techreborn:advanced_machine_frame input techreborn:refined_iron_ingot techreborn:advanced_circuit techreborn:refined_iron_ingot output techreborn:industrial_centrifuge "/>
+
 ### Methane
 
 One <McItem slug="techreborn:methane_cell"/> can be produced from any of the following:
