Fix Drain recipe

--- a/docs/blocks/machines/drain.mdx
+++ b/docs/blocks/machines/drain.mdx
@@ -17,8 +17,8 @@ Introduced in the 1.15 version of Tech Reborn
 
 ## Recipe
 
-<CraftingTable recipe="input techreborn:refined_iron_plate minecraft:hopper techreborn:refined_iron_plate input techreborn:basic_machine_frame minecraft:bucket techreborn:basic_machine_frame input techreborn:refined_iron_plate techreborn:basic_machine_frame techreborn:refined_iron_plate output techreborn:drain "/>
+<CraftingTable recipe="input techreborn:refined_iron_plate minecraft:iron_bars techreborn:refined_iron_plate input techreborn:refined_iron_plate minecraft:hopper techreborn:refined_iron_plate input techreborn:refined_iron_plate minecraft:bucket techreborn:refined_iron_plate output techreborn:drain "/>
 
 ## History
 
-- Updated for 1.16 version
+- Updated for 1.21 version
